sandbox/output
AnagramTest.java:17: error: cannot find symbol
        assertThat(result, is(Arrays.asList("a")));
                           ^
  symbol:   method is(List<String>)
  location: class AnagramTest
1 error
